--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,49 +3,61 @@
     <div class="form__wrapper">
       <h2 class="page-heading">ユーザー新規登録</h2>
 
-        <%# 「モデル名」にはUserモデルであれば@userを渡しましょう。%>
-        <%# 「新規登録機能へのパス」は、devise導入後にrails routesを実行してdevise/registrations#createへのパスを確認し、記載してください。 %>
-        <%= form_with model: モデル名, url: 新規登録機能へのパス, local: true do |f| %>
+        <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
+        <div class="enter_form">
+       
 
+        
         <div class="field">
-          <%= f.label :hoge, "メールアドレス" %><br />
-          <%= f.email_field :hoge, id:"user_email", autofocus: true, autocomplete: "email" %>
+          <%= f.label :personnel_number,  "社員番号" %>
+          <%= f.text_field :personnel_number, :size=> "25", id:"personnel_number"  %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "パスワード（6文字以上）" %><br />
-          <%= f.password_field :hoge, id:"user_password", autocomplete: "new-password" %>
+          <%= f.label :department_category_id, "所属" %>
+          <%= f.text_field :department_category_id, id:"department" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "パスワード再入力" %><br />
+          <%= f.label :position_category_id , "役職" %>
+          <%= f.text_field :position_category_id , id:"position" %>
+        </div>
+        <div class="name_field">
+        <div class="field">
+          <%= f.label :last_name, "姓" %>
+          <%= f.text_field :last_name, id:"last_name" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :first_name, "名" %>
+          <%= f.text_field :first_name, id:"first_name" %>
+        </div>
+        </div>
+        <div class="field">
+          <%= f.label :email, "メールアドレス" %>
+          <%= f.email_field :email, id:"user_email", autofocus: true, autocomplete: "email" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :encrypted_password, "パスワード" %>
+          <%= f.password_field :encrypted_password, id:"user_password", autocomplete: "new-password" %>
+           <p>（6文字以上の半角英字と数字の両方を含めて設定）</p>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, "パスワード再入力" %><br />
           <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
         </div>
+        
 
-        <div class="field">
-          <%= f.label :hoge, "ユーザー名" %><br />
-          <%= f.text_field :hoge, id:"user_name" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :hoge, "プロフィール" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_profile" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :hoge, "所属" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_occupation" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :hoge, "役職" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_position" %>
-        </div>
 
         <div class="actions">
           <%= f.submit "新規登録", class: :form__btn  %>
         </div>
+       </div>
+       
       <% end %>
     </div>
   </div>
 </div>
+
