カテゴリー選択の設定(役職)

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
 
         <div class="field">
           <%= f.label :position_category_id , "役職" %>
-          <%= f.text_field :position_category_id , id:"position" %>
+           <%= f.collection_select(:position_category_id, PositionCategory.all, :id, :name, {}, {class:"position"})  %>
         </div>
         <div class="name_field">
         <div class="field">
