--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,10 @@
 
         <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
         <div class="enter_form">
-       
-
         
         <div class="field">
           <%= f.label :personnel_number,  "社員番号" %>
-          <%= f.text_field :personnel_number, :size=> "25", id:"personnel_number"  %>
+          <%= f.text_field :personnel_number, :size=> "25", id:"personnel_number", autocomplete: "personnel_number", placeholder:"9文字の半角数字"  %>
         </div>
 
         <div class="field">
@@ -25,12 +23,12 @@
         <div class="name_field">
         <div class="field">
           <%= f.label :last_name, "姓" %>
-          <%= f.text_field :last_name, id:"last_name" %>
+          <%= f.text_field :last_name, id:"last_name", autocomplete: "last_name" %>
         </div>
 
         <div class="field">
           <%= f.label :first_name, "名" %>
-          <%= f.text_field :first_name, id:"first_name" %>
+          <%= f.text_field :first_name, id:"first_name", autocomplete: "first_name" %>
         </div>
         </div>
         <div class="field">
@@ -39,9 +37,9 @@
         </div>
 
         <div class="field">
-          <%= f.label :encrypted_password, "パスワード" %>
-          <%= f.password_field :encrypted_password, id:"user_password", autocomplete: "new-password" %>
-           <p>（6文字以上の半角英字と数字の両方を含めて設定）</p>
+          <%= f.label :password, "パスワード" %>
+          <%= f.password_field :password, id:"user_password", placeholder:"6文字以上の半角英数字" %>
+           <p class='info-text'>*6文字以上の半角英字と数字の両方を含めて設定</p>
         </div>
 
         <div class="field">
@@ -49,8 +47,6 @@
           <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
         </div>
         
-
-
         <div class="actions">
           <%= f.submit "新規登録", class: :form__btn  %>
         </div>
