--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,8 +1,57 @@
 <div class="main">
   <div class="inner">
     <div class="form__wrapper">
-      <h2 class="page-heading">新規プロトタイプ投稿</h2>
-        <%# 部分テンプレートでフォームを表示する %>
+       <h1 class="page-heading">新規出張フォーム</h1>
+        <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
+        <div class="enter_form">
+        
+        <div class="field">
+          <%= f.label :personnel_number,  "社員番号" %>
+          <%= f.text_field :personnel_number, :size=> "25", id:"personnel_number", autocomplete: "personnel_number", placeholder:"9文字の半角数字"  %>
+        </div>
+
+        <div class="field">
+          <%= f.label :department_category_id, "所属" %>
+          <%= f.collection_select(:department_category_id, DepartmentCategory.all, :id, :name, {}, {class:"department"})  %>
+        </div>
+
+        <div class="field">
+          <%= f.label :position_category_id , "役職" %>
+           <%= f.collection_select(:position_category_id, PositionCategory.all, :id, :name, {}, {class:"position"})  %>
+        </div>
+        <div class="name_field">
+        <div class="field">
+          <%= f.label :last_name, "姓" %>
+          <%= f.text_field :last_name, id:"last_name", autocomplete: "last_name" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :first_name, "名" %>
+          <%= f.text_field :first_name, id:"first_name", autocomplete: "first_name" %>
+        </div>
+        </div>
+        <div class="field">
+          <%= f.label :email, "メールアドレス" %>
+          <%= f.email_field :email, id:"user_email", autofocus: true, autocomplete: "email" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password, "パスワード" %>
+          <%= f.password_field :password, id:"user_password", placeholder:"6文字以上の半角英数字" %>
+           <p class='info-text'>*6文字以上の半角英字と数字の両方を含めて設定</p>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, "パスワード再入力" %><br />
+          <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
+        </div>
+        
+        <div class="actions">
+          <%= f.submit "新規登録", class: :form__btn  %>
+        </div>
+       </div>
+       
+      <% end %>
     </div>
   </div>
 </div>
