--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,13 +1,3 @@
-<<<<<<< Updated upstream
-<div class="main">
-  <div class="inner">
-    <div class="form__wrapper">
-      <h2 class="page-heading">新規プロトタイプ投稿</h2>
-        <%# 部分テンプレートでフォームを表示する %>
-    </div>
-  </div>
-</div>
-=======
 <div class='chat-room-form'>
   <h1>新規出張作成フォーム</h1>
   <%=form_with model: @trip, local: true do |f|%>
@@ -18,38 +8,103 @@
       <div class='chat-room-form__field--right'>
         <%= f.text_field :item_name, class: 'chat__room_name chat-room-form__input', placeholder: '20字以内で入力してください'%>
       </div>
-
-       <div class='chat-room-form__field--left'>
-        <%= f.label :first_day, :初日, class: 'chat-room-form__label'%>
-      </div>
-      <div class='chat-room-form__field--right'>
-        <%= f.text_field :first_day, class: 'chat__room_name chat-room-form__input', placeholder: '20字以内で入力してください'%>
-      </div>
-
-       <div class='chat-room-form__field--left'>
-        <%= f.label :last_day, :最終日, class: 'chat-room-form__label'%>
-      </div>
-      <div class='chat-room-form__field--right'>
-        <%= f.text_field :last_day, class: 'chat__room_name chat-room-form__input', placeholder: '20字以内で入力してください'%>
-      </div>
-
-
+ <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">出張初日</label>
     </div>
-    <div class='chat-room-form__field'>
+    <div class='input-birth-wrap'>
+      <%= raw sprintf(
+                  f.date_select(
+                    :birthday,
+                    class:'select-birth',
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s'),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
     </div>
-    <div class='chat-room-form__field'>
+<div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">出張最終日</label>
+    </div>
+    <div class='input-birth-wrap'>
+      <%= raw sprintf(
+                  f.date_select(
+                    :birthday,
+                    class:'select-birth',
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s'),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+    </div>
+      
       <div class='chat-room-form__field--left'>
-        <label class='chat-room-form__label' for='chat_room_メンバー1'>メンバー1</label>
+        <label class='chat-room-form__label' for='chat_room_チャットメンバー'>出張メンバー１</label>
       </div>
       <div class='chat-room-form__field--right'>
+        <select>
+          <option value="">出張メンバーを選択してください</option>
+          <% User.all.each do |user| %>
+            <option><%= user.name %></option>
+          <% end %>
+        </select>
+      </div>
+       <div class='chat-room-form__field--left'>
+        <label class='chat-room-form__label' for='chat_room_チャットメンバー'>出張メンバー２</label>
+      </div>
+      <div class='chat-room-form__field--right'>
+        <select>
+          <option value="">出張メンバーを選択してください</option>
+          <% User.all.each do |user| %>
+            <option><%= user.name %></option>
+          <% end %>
+        </select>
+      </div>
+       <div class='chat-room-form__field--left'>
+        <label class='chat-room-form__label' for='chat_room_チャットメンバー'>出張メンバー３</label>
+      </div>
+      <div class='chat-room-form__field--right'>
+        <select>
+          <option value="">出張メンバーを選択してください</option>
+          <% User.all.each do |user| %>
+            <option><%= user.name %></option>
+          <% end %>
+        </select>
+      </div>
+       <div class='chat-room-form__field--left'>
+        <label class='chat-room-form__label' for='chat_room_チャットメンバー'>出張メンバー４</label>
+      </div>
+      <div class='chat-room-form__field--right'>
+        <select>
+          <option value="">出張メンバーを選択してください</option>
+          <% User.all.each do |user| %>
+            <option><%= user.name %></option>
+          <% end %>
+        </select>
+      </div>
+       <div class='chat-room-form__field--left'>
+        <label class='chat-room-form__label' for='chat_room_チャットメンバー'>事務担当者</label>
+      </div>
+      <div class='chat-room-form__field--right'>
+        <select>
+          <option value="">事務担当者を選択してください</option>
+          <% User.all.each do |user| %>
+            <option><%= user.name %></option>
+          <% end %>
+        </select>
       </div>
     </div>
+
     <div class='chat-room-form__field'>
       <div class='chat-room-form__field--left'></div>
       <div class='chat-room-form__field--right'>
-        <%= f.submit class: 'chat-room-form__action-btn'%>
+        <%= f.submit "作成" , class: 'chat-room-form__action-btn'%>
       </div>
     </div>
   <% end %>
 </div>
->>>>>>> Stashed changes
