--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -16,13 +16,13 @@
       <p class="prototype__hedding">
         <%= "プロトタイプのタイトル"%>
       </p>
-      <%= link_to @trip.item_name, trip_path(trip.id), class: :prototype__user %>
+      <%#= link_to @trip.item_name, trip_path(trip.id), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
 
         <div class="prototype__manage">
           <%= link_to "編集する", root_path, class: :prototype__btn %>
           <%= link_to "削除する", root_path, class: :prototype__btn %>
-           <%= link_to "スケジュールを作成する",root_path, class: :prototype__btn %>
+           <%= link_to "スケジュールを作成する", new_schedule_path, class: :prototype__btn %>
        
   </div>
         </div>
