画像保存の設定

--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -6,8 +6,10 @@
 <%= f.time_field :開始時間 %><br>
 <%= f.label :終了時間 %>
 <%= f.time_field :終了時間 %><br>
-<%= f.label :"スケジュールの内容" %>
-    <%= f.text_field :item_name, id:"prototype_title" %><br>
+<%= f.label :"スケジュール" %>
+<%= f.text_field :item_name, id:"prototype_title" %><br>
+<%= f.label :"場所" %>
+<%= f.text_field :place, id:"prototype_title" %><br>
 <%= f.label :"参考URL" %>
 <%= f.url_field :url, id:"参考URL" %> <br>
 <p>アイコンを選択してください</p>
