--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,15 +1,4 @@
-// Place all the styles related to the user controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 
-.registration-main {
-  width: 100%;
-  min-width: 800px;
-  height: 100%;
-  background-color: #f5f5f5;
-  display: flex;
-  justify-content: center;
-}
 /* ユーザーログインページの調整 */
 /* フォームを中央へ */
 .sign_in{
@@ -18,33 +7,44 @@
   align-items: center;
   text-align:center;
 }
-
-/* ↓↓フォームの中を更に中央へ */
+/* ユーザーサインインのフォームの中を更に中央へ */
 .actions_sign_in{
   margin-bottom: 40px;
   margin-top: 20px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  
+  align-items: center;  
+}
+/* ユーザーログインページの調整 */
 
+
+/* ユーザー新規登録ページの調整 */
+/* ユーザー新規登録のフォームボタンを中央へ */
+.actions_enter{
+  margin-bottom: 40px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+/* ユーザー新規登録のフォームを中央へ */
+.enter_form{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+/* 入力フォームとラベルを横並びに */
+.field_user{
+  display: flex;
+}
+/* ラベルの幅指定と右寄せを指定 */
+.field_user_enter{
+  width: 150px;
+  text-align: right;
 }
 
-/* ↑↑ユーザーログインページの調整 */
-.form-header {
-  width: 100%;
-  height: 120px;
-  text-align: center;
-  font-size: 22px;
+.info-text{
+  text-align: right;
 }
-
-.form-header {
-  width: 100%;
-  height: 120px;
-  text-align: center;
-  font-size: 22px;
-}
-
 /* form-wrapは商品購入画面でも使用しています */
 .form-wrap {
   width: 50%;
