--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,62 @@
 <div class="main">
   <div class="inner">
     <div class="form__wrapper">
-      <h2 class="page-heading">ユーザー新規登録</h2>
+      <h2 class="page-heading">ユーザー新規登録</h2><br>
 
         <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
         <div class="enter_form">
         
-        <div class="field">
+        <div class="field_user">
+        <div class="field_user_enter">
           <%= f.label :personnel_number,  "社員番号" %>
+          </div>
           <%= f.text_field :personnel_number, :size=> "25", id:"personnel_number", autocomplete: "personnel_number", placeholder:"9文字の半角数字"  %>
-        </div>
+        </div><br>
 
-        <div class="field">
+        <div class="field_user">
+        <div class="field_user_enter">
           <%= f.label :department_category_id, "所属" %>
+          </div>
           <%= f.collection_select(:department_category_id, DepartmentCategory.all, :id, :name, {}, {class:"department"})  %>
-        </div>
+        </div><br>
 
-        <div class="field">
+        <div class="field_user">
+        <div class="field_user_enter">
           <%= f.label :position_category_id , "役職" %>
+          </div>
            <%= f.collection_select(:position_category_id, PositionCategory.all, :id, :name, {}, {class:"position"})  %>
-        </div>
+        </div><br>
        
-        <div class="field">
+        <div class="field_user">
+        <div class="field_user_enter">
           <%= f.label :name, "名前" %>
+          </div>
           <%= f.text_field :name, id:"name", autocomplete: "name" %>
-        </div>
+        </div><br>
 
-        <div class="field">
+        <div class="field_user">
+        <div class="field_user_enter">
           <%= f.label :email, "メールアドレス" %>
+          </div>
           <%= f.email_field :email, id:"user_email", autofocus: true, autocomplete: "email" %>
-        </div>
+        </div><br>
 
-        <div class="field">
+        <div class="field_user">
+        <div class="field_user_enter">
           <%= f.label :password, "パスワード" %>
-          <%= f.password_field :password, id:"user_password", placeholder:"6文字以上の半角英数字" %>
-           <p class='info-text'>*6文字以上の半角英字と数字の両方を含めて設定</p>
+          </div>
+          <%= f.password_field :password, id:"user_password", placeholder:"6文字以上の半角英数字" %><br>
         </div>
+        <div class='info-text'>*6文字以上の半角英字と数字の両方を含めて設定</div><br>
 
-        <div class="field">
-          <%= f.label :password_confirmation, "パスワード再入力" %><br />
+        <div class="field_user">
+        <div class="field_user_enter">
+          <%= f.label :password_confirmation, "パスワード再入力" %>
+          </div>
           <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
-        </div>
+        </div><br>
         
-        <div class="actions">
+        <div class="actions_enter">
           <%= f.submit "新規登録", class: :form__btn  %>
         </div>
        </div>
