マイページの一覧の調整

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,7 +6,6 @@
 .enter_form{
   width:29em;
   margin:  0 auto;
-
 }
 
 .card__wrapper {
@@ -20,4 +19,29 @@
 label {
   width: 150px;
   margin: 10px;
+}
+
+/* マイページの表の調整 */
+table {
+  border-collapse: separate;  /* 表の線と線の間を空ける */
+  border-spacing:  5px;       /* 表の線と線の間の幅 */
+}
+
+th,td {
+  padding: 5px 10px;          /* 余白指定 */
+}
+
+th {
+  background-color:  #3F51B5; /* 背景色指定 */
+  color:  #fff;               /* 文字色指定 */
+  font-weight:  normal;       /* 文字の太さ指定 */
+}
+
+td {
+  background-color:  #c0c9ff; /* 背景色指定 */
+}
+
+.main{
+  margin-left: 10px;
+  margin-right: 10px;
 }
