--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -115,7 +115,11 @@ hills-image {
 
 /* フォーム周り */
 
-
+/* マイページのフォーム修正 */
+.main{
+  margin-left: 100px;
+}
+/* ↑マイページのフォーム修正 */
 .form__wrapper{
   min-height: calc(100vh - 161px);
 }
@@ -176,6 +180,7 @@ hills-image {
 .card {
   width: calc((100% - 50px) / 3);
   margin-bottom: 60px;
+  margin-left: 50px;
 }
 .card__img {
   margin-bottom: 16px;
