--- a/app/views/users/_trip.html.erb
+++ b/app/views/users/_trip.html.erb
@@ -1,38 +1,41 @@
+
 <div class="card">
-   <% @trips.each do |trip| %>
-  <div class="card__body">
-   <%= link_to trip.item_name, trip_path(trip.id), class: :card__title %>
-
-
-
-   <div class="card">
-    <div class="enter_form">
-     <% @trips.each do |trip| %>
-      <div class="card__body">
-       <%= "出張名：" %>
-      <%= link_to trip.item_name, trip_path(trip.id), class: :card__title %>
-     <p class="card__summary">
-       <%= "出張期間：" %>
-       <%= trip.first_day %>
-       <%="~"%>
-       <%= trip.last_day %>
-    </p>
-    <p class="card__summary">
-      <%= "出張メンバー：" %>
-      <% trip.users.each do |user| %>
-      <%= user.name %>
-      <% end %><br><br>
-      <% end %>
-    </p>
-
-
-   
-  </div>
-
-    
+  <main class="main">
+    <div class="inner">
+      <div class="card">
+        <table class="teble">
+       
+          <thead>
+            <tr>
+             <th class="header1">出張<p>タイトル</th>
+             <th class="header2">出張期間</th>
+             <th class="header3">出張メンバー1</th>
+              <th class="header3">出張メンバー2</th>
+               <th class="header3">出張メンバー3</th>
+                <th class="header3">出張メンバー4</th>
+                 <th class="header3">出張メンバー5</th>
+             <th class="header3">詳細</th>
+            </tr>
+          </thead>
+          <tbody>
+           <% @trips.each do |trip| %>
+           <% trip.users.each do |user| %>   
+            <tr>
+             <td><%= trip.item_name %></td>
+             <td><%=  trip.first_day %> 〜 <%= trip.last_day %></td>
+             <td><%= user.name %></td>
+             <td><%= user.name %></td>
+             <td><%= user.name %></td>
+             <td><%= user.name %></td>
+             <td><%= user.name %></td>
+             <td><%= link_to "詳細", trip_path(trip.id) %></td>
+            </tr>
+           <% end %>
+           <% end %>
+          </tbody> 
+        </table>
+      </div>
      </div>
     </div>
-
-
-
-
+  </main> 
+</div>
