--- a/app/views/users/_trip.html.erb
+++ b/app/views/users/_trip.html.erb
@@ -27,7 +27,7 @@
              <td><%= user.name %></td>
              <td><%= user.name %></td>
              <td><%= user.name %></td>
-             <td><%= user.name %></td>
+             <td><s%= uer.name %></td>
              <td><%= link_to "詳細", trip_path(trip.id) %></td>
             </tr>
            <% end %>
