--- a/app/assets/stylesheets/trips.scss
+++ b/app/assets/stylesheets/trips.scss
@@ -1,3 +1,38 @@
 // Place all the styles related to the trips controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* tripの詳細ページの調整 */
+/* 編集、削除ボタンの調整 */
+.trip__btn{
+  display: inline-block;
+  padding: 0.4em 1.6em;
+  font-size: 0.8em;
+  color: #dae3e7;
+  color: blue;
+  text-decoration: none;
+  user-select: none;
+  border: 1px blue solid;
+  border-radius: 3px;
+  transition: 0.4s ease;
+  margin: 2px;
+}
+/* スケジュール作成ボタンの調整 */
+.schedule__btn{
+  display: inline-block;
+
+.schedule__manage{
+  width: 100%;  
+    border: 1px solid #000;  
+}
+
+  padding: 0.4em 1.6em;
+  font-size: 0.8em;
+  color: #dae3e7;
+  color: blue;
+  text-decoration: none;
+  user-select: none;
+  border: 1px blue solid;
+  border-radius: 3px;
+  transition: 0.4s ease;
+}
