マイページの調整

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -24,21 +24,26 @@ label {
 /* マイページの表の調整 */
 table {
   border-collapse: separate;  /* 表の線と線の間を空ける */
-  border-spacing:  5px;       /* 表の線と線の間の幅 */
+  border-spacing:  6px;       /* 表の線と線の間の幅 */
+  empty-cells:     show;
 }
 
 th,td {
   padding: 5px 10px;          /* 余白指定 */
+  
+
 }
 
 th {
   background-color:  #3F51B5; /* 背景色指定 */
   color:  #fff;               /* 文字色指定 */
   font-weight:  normal;       /* 文字の太さ指定 */
+
 }
 
 td {
-  background-color:  #c0c9ff; /* 背景色指定 */
+  background-color:  #e0e3f6; /* 背景色指定 */
+
 }
 
 .main{
