--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -1,10 +1,8 @@
 <%= form_with model: @trip, local: true do |f|%>
-  <div class="field">
-    <%= f.label :item_name, "出張タイトル" %><br />
-    <%= f.text_field :item_name, id:"prototype_title" %>
-  </div>
-
-<div class="form-group">
+  <div class="field_new_trip">
+  <div class="form-group">
+    <%= f.label :item_name, "出張タイトル" %>
+    <%= f.text_field :item_name, id:"prototype_title" %><br>
     <div class='form-text-wrap'>
       <label class="form-text">出張初日</label>
     </div>
@@ -21,8 +19,8 @@
                     date_separator: '%s'),
                   "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
     </div>
-<div class="form-group">
-    <div class='form-text-wrap'>
+       
+         <div class='form-text-wrap'>
       <label class="form-text">出張最終日</label>
     </div>
     <div class='input-birth-wrap'>
@@ -49,12 +47,47 @@
           <% User.where.not(id: current_user.id).each do |user| %>
             <option value=<%= user.id %>><%= user.name %></option>
           <% end %>
-       </select>
+      </select>
+
+      <div class='chat-room-form__field--right'>
+      <select name="trip[user_ids][]">
+          <option value="">出張するユーザーを選択してください</option>
+          <% User.where.not(id: current_user.id).each do |user| %>
+            <option value=<%= user.id %>><%= user.name %></option>
+          <% end %>
+      </select>
+
+      <div class='chat-room-form__field--right'>
+      <select name="trip[user_ids][]">
+          <option value="">出張するユーザーを選択してください</option>
+          <% User.where.not(id: current_user.id).each do |user| %>
+            <option value=<%= user.id %>><%= user.name %></option>
+          <% end %>
+      </select>
+
+      <div class='chat-room-form__field--right'>
+      <select name="trip[user_ids][]">
+          <option value="">出張するユーザーを選択してください</option>
+          <% User.where.not(id: current_user.id).each do |user| %>
+            <option value=<%= user.id %>><%= user.name %></option>
+          <% end %>
+      </select>
+
+      <div class='chat-room-form__field--right'>
+      <select name="trip[user_ids][]">
+          <option value="">出張するユーザーを選択してください</option>
+          <% User.where.not(id: current_user.id).each do |user| %>
+            <option value=<%= user.id %>><%= user.name %></option>
+          <% end %>
+      </select>
         <input name="trip[user_ids][]" type="hidden" value=<%= current_user.id %>>
       </div>
-    </div>
+      </div>
+</div><br>
 
   <div class="actions">
     <%= f.submit "作成する", class: :form__btn  %>
-  </div>
+  </div><br>
 <% end %>
+</div>
+</div>
