--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,8 +1,10 @@
-<div class="main">
+<main class="main">
   <div class="inner">
     <div class="form__wrapper">
-      <h2 class="page-heading">プロトタイプ編集</h2>
+      <h2 class="page-heading">出張編集フォーム</h2>
       <%# 部分テンプレートでフォームを表示する %>
+      <%= render partial: "form" %>
     </div>
   </div>
-</div>
+</main>
+
