--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,4 +1,4 @@
-<div class="main">
+<main class="main">
   <div class="inner">
     <div class="form__wrapper">
       <h2 class="page-heading">新規出張作成フォーム</h2>
@@ -7,4 +7,4 @@
         
     </div>
   </div>
-</div>
+</main>
