--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -28,7 +28,7 @@
      <div class="prototype__wrapper">
         <div class="prototype__manage">
           <%= link_to "出張の編集", edit_trip_path(@trip.id), class: :trip__btn %>
-          <%= link_to "出張の削除", root_path, class: :trip__btn %><br><br>
+          <%= link_to "出張の削除", trip_path(@trip.id), method: :delete, class: :trip__btn %><br><br>
         </div>
      </div>
         <div class="schedule__manage">
